<resources>
    <string name="app_name">My Tech Bus</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_having_account">Already Having an Account?</string>
    <string name="log_in">Log In</string>
    <string name="not_having_account">Not Having an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="booking">Book Ticket</string>
    <string name="book">Book Ticket</string>
    <string name="start_stage">Start Stage</string>
    <string name="end_stage">End Stage</string>
    <string name="full_passangers">Full</string>
    <string name="half_passangers">Half</string>
    <string name="luggage">Luggage</string>
    <string name="total">Total</string>
    <string name="back">Back</string>
    <string name="mobile">Mobile (optional)</string>
    <string name="permission_read_phone_state_rationale">Permission required to continue further</string>
    <string name="permissions_not_granted_read_phone_state">Permission Rejected</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_booking">Book Tickets</string>
    <string name="print">Print</string>
    <string name="cancle">Cancel</string>
    <string name="upload_log">Upload Log</string>
    <string name="reprint">RP</string>
    <string name="change_route">Change Route</string>
    <string name="update_route">Update Route</string>
</resources>
