<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="mytechbus.hpie.com.mytechbus.BookingActivity">

    <TextView
        android:id="@+id/textRoute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:text="Route" />

    <TextView
        android:id="@+id/textTicketNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:text="Route" />

    <RadioGroup
        android:id="@+id/journeyType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Journey Type:"
            />

        <RadioButton
            android:id="@+id/radio_onward"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:checked="true"
            android:visibility="gone"
            android:text="ONWARD" />

        <RadioButton
            android:id="@+id/radio_return"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="RETURN" />

        <RadioButton
            android:id="@+id/radio_circular"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="RETURN" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/startStage"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:inputType="textPersonName" />

        <Spinner
            android:id="@+id/endStage"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fullLabel"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="Full"
            android:textSize="22sp" />
        <TextView
            android:id="@+id/fullRate"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:textSize="22sp"
            android:layout_weight="1"
            android:text="Full" />
        <Button
            android:id="@+id/fullMinus"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="#aaa"
            android:text="-"
            android:textColor="@android:color/white" />
        <EditText
            android:id="@+id/etFullPassengers"
            android:text="0"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:inputType="none"
            android:textIsSelectable="true"
            android:focusable="false"
            android:padding="10dp" />
        <Button
            android:id="@+id/fullPlus"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="#aaa"
            android:text="+"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/halfLabel"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="Half"
            android:textSize="22sp" />
        <TextView
            android:id="@+id/halfRate"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:textSize="22sp"
            android:layout_weight="1"
            android:text="Half" />
        <Button
            android:id="@+id/halfMinus"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="#aaa"
            android:text="-"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/etHalfPassengers"
            android:text="0"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:inputType="none"
            android:textIsSelectable="true"
            android:focusable="false"
            android:padding="10dp" />
        <Button
            android:id="@+id/halfPlus"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="#aaa"
            android:text="+"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/luggageLabel"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="Luggage"
            android:textSize="22sp" />
        <TextView
            android:id="@+id/luggageRate"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:textSize="22sp"
            android:layout_weight="1"
            android:text="Luggage" />

        <Button
            android:id="@+id/luggageMinus"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="#aaa"
            android:text="-"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etLuggage"
            android:text="0"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:inputType="none"
            android:textIsSelectable="true"
            android:focusable="false"
            android:padding="10dp"  />

        <Button
            android:id="@+id/luggagePlus"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="#aaa"
            android:text="+"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/discountLabel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="Discount"
            android:textSize="22sp" />

        <Spinner
            android:id="@+id/spinnerDiscount"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:inputType="textPersonName" />
    </LinearLayout>

    <EditText
        android:id="@+id/etTotal"
        android:text="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/total"
        android:inputType="none"
        android:textIsSelectable="true"
        android:focusable="false"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/mobile"
        android:inputType="number"
        android:padding="10dp" />

    <Button
        android:id="@+id/btnBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#f05924"
        android:text="@string/book"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#aaa"
        android:text="@string/back"
        android:textColor="@android:color/white" />


</LinearLayout>